--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+body,button{
   margin: 0;
   padding: 0;
   font-family: 'Josefin Sans', sans-serif;
@@ -15,4 +15,9 @@ h1, h2, h3, h4, h5, h6 {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.button:hover {
+  width: 26%;
+  height: 3vh;
 }
