--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ body,button{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Encode Sans SC', sans-serif;
+  font-family: 'Dancing Script', cursive;
   margin: 0;
  
 }
